checkboxes on creating event works

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,6 +4,9 @@
   position: fixed !important;
   z-index: 1000;
   width: 100%;
+  padding-left: 80px;
+  padding-right: 80px;
+  box-shadow: 0px 0px 10px rgb(233, 233, 233);
 }
 
 .navbar-circl .navbar-collapse {
