--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -31,6 +31,10 @@
     margin-left: 80px;
 }
 
+.btn-show2 {
+  margin-right: 16px;
+}
+
 .map-style-show {
     text-align: center;
     margin: 0 auto;
