--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,12 +36,16 @@
   </div>
 </div>
 <%= link_to "Back to all events", events_path, class: "btn-standard btn-show" %>
-<% if @request_done %>
-  <span class="btn btn-primary">
-    <%= @request_done.status %>
-  </span>
+<% if current_user == @event.user %>
+  <%= link_to "Edit Event", edit_event_path(@event), class: "btn-standard btn-show2" %>
 <% else %>
-  <%= link_to "Ask to join", event_requests_path(@event), method: :post,  class: "btn btn-info" %>
+  <% if @request_done %>
+    <span class="btn btn-primary">
+      <%= @request_done.status %>
+    </span>
+  <% else %>
+    <%= link_to "Ask to join", event_requests_path(@event), method: :post,  class: "btn btn-info" %>
+  <% end %>
 <% end %>
 <div class="desc-show-page">
   <p class="desc-show"><%= @event.description %></p>
