home controller calucates requests on each event, sorts it and put the most requested events on home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -75,6 +75,8 @@
   // grid-gap: 16px;
   width: 75%;
   margin: auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-homepage {
