autocomplete fixed. bug caused by invalid js plugin

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,8 +13,8 @@
     </div>
 </section>
 
-<% if @events.count >= 1 %>
-<p class="header-index">We found <strong><%= @events.count %></strong> events for you</p>
+<% if @events.size >= 1 %>
+<p class="header-index">We found <strong><%= @events.size %></strong> events for you</p>
   <div class="con">
     <div class="row">
         <div class="col-lg-6">
