--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -17,6 +17,17 @@
     font-size: 16px;
 }
 
+#category_id {
+    width: 500px;
+    height: 58px;
+    border-radius: 1px;
+    border: 1px solid $primary-color;
+    color: rgb(124, 124, 124);
+    font-size: 20px;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
 .header-index {
     margin: 40px 0px 20px 80px;
     font-size: 20px;
