added http:// link tip on edit of social media

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -46,10 +46,10 @@
     <%= f.file_field :image %>
     <%= f.input :instagram,
                 autofocus: true,
-                placeholder: "Instagram profile" %>
+                placeholder: "Instagram Link [https://...]" %>
     <%= f.input :linkedin,
                 autofocus: true,
-                placeholder: "LinkedIn profile" %>
+                placeholder: "LinkedIn profile [https://...]" %>
     <%= f.input :current_password,
                 hint: "we need your current password to confirm your changes",
                 required: true,
