removed my requests from profile show and renamed navbar dropdown lists

--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -163,7 +163,7 @@
   padding-bottom: 64px;
   padding-left: 120px;
   padding-right: 120px;
-  background:white;
+  background: rgba(196, 196, 196, 0.49);
   h2 {
     padding-bottom: 72px;
   }
