event image upload bug fixed

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -40,10 +40,9 @@
                 <% end %>
             </div>
         </div>
-        <%= f.input :image, 
-            as: :file, 
-            class:"create-field-image" %>
+        <%= f.file_field :photo %>
         <%= f.submit "Create event", 
             class:"create-field-submit btn-standard" %>
     <% end %>
 </div>
+#
