footer now more detailed with frontend, still some work to do tho i think

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,40 @@
 <div class="footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+  <div class="footer-body">
+    <div class="footer-logo">
+      <%= image_tag "logo-reverse.png" %>
+    </div>
+    <div class="footer-features">
+      <p class="footer-features-header"><strong>FEATURES</strong></p>
+      <p>Browse events</p>
+      <p>Host event</p>
+      <p>See your profile</p>
+      <p>Dashboard</p>
+    </div>
+    <div class="footer-features">
+      <p class="footer-features-header"><strong>CONNECT</strong></p>
+      <p>For Partners</p>
+      <p>Contact</p>
+      <p>Partner with us</p>
+    </div>
+    <div class="footer-features">
+      <p class="footer-features-header"><strong>USEFUL LINKS</strong></p>
+      <p>Help</p>
+      <p>Blog</p>
+      <p>Our Partners</p>
+    </div>
+    <div class="footer-stuff">
+      <div class="footer-links">
+        <a href="#"><i class="fab fa-instagram fa-lg"></i></a>
+        <a href="#"><i class="fab fa-facebook fa-lg"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-lg"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-lg"></i></a>
+      </div>
+    </div>
   </div>
   <div class="footer-copyright">
-    Copyright Circl 2020
+    <p>© 2020, Circl. All rights reserved.</p>
+
+    <br>
+    When you visit or interact with our sites, services or tools, we or our authorised service providers may use cookies for storing information to help provide you with a better, faster and safer experience and for marketing purposes.
   </div>
 </div>
