--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,26 +1,73 @@
 .footer {
+  height: auto;
+
+  color: rgb(255, 255, 255);
   background: $primary-color;
+  padding: 75px 100px 25px 100px;
+}
+
+.footer-body {
+
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+
 }
 
 .footer-links {
   display: flex;
-  align-items: center;
+  // align-items: center;
+  margin: 0 auto;
+  margin-top: 12px;
+
+
 }
 
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: white;
+
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
+
 }
 
 .footer-links a:hover {
-  opacity: 1;
+  opacity: 0.5;
+}
+
+
+.footer-features {
+  // margin: 20px;
+  margin-bottom: 40px;
+  font-size: 16px;
+
+  p {
+    margin: 5px;
+
+  }
+}
+
+.footer-features-header {
+  font-size: 17px;
+}
+
+.footer-logo {
+  margin-top: -8px;
+  img {
+    height: 65px;
+
+  }
+}
+
+.footer-copyright {
+  text-align: center;
+  font-size: 12px;
+  margin: 0 150px;
+  padding-top: 25px;
+  border-top: 1px solid lightgrey;
+  p {
+    margin: 0;
+    font-size: 15px
+  }
 }
