--- a/app/views/events/_info_window.html.erb
+++ b/app/views/events/_info_window.html.erb
@@ -1,6 +1,6 @@
 <div>
-    <% if event.image.attached?  %>
-        <%= cl_image_tag event.image.key, class: "event-img-window" %>
+    <% if event.photo.attached?  %>
+        <%= cl_image_tag event.photo.key, class: "event-img-window" %>
       <% else %>
         <img class="event-img-window" src="https://source.unsplash.com/PGnqT0rXWLs" alt="">
       <% end %>
