--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,7 +7,7 @@
 
     &:hover{
         border: 1px solid $primary-color;
-        background-color: white;
+        background-color: transparent;
         color: $primary-color;
         text-decoration: none;
     }
