--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,160 +1,115 @@
 // Specific CSS for your home-page
 
-// banner section
-.d-grid{
-  display: grid;
+// header section
+.header {
+  background-image: url("https://images.unsplash.com/photo-1563569612708-eaffb3ab7986?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3289&q=80");
+  background-size:cover;
+  height: 720px;
 }
 
-.banner-grid{
-  grid-template-columns: 2fr 3fr;
-  margin-right: -2rem;
-  z-index: 2;
-}
-
-.banner-header {
-  width: 75%;
-}
-
-.banner-search-bar {
-  display: flex;
-  padding: 0 10px;
-
-}
-
-.banner-homepage-left {
-  // padding-top: 64px;
-  margin: auto;
-  background-image: url("https://images.pexels.com/photos/708392/pexels-photo-708392.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"), linear-gradient(rgba(134, 134, 134, 0.5), rgba(172, 172, 172, 0.5));
-     background-blend-mode: color;
-  height: 800px;
-  background-position: center;
-  background-size: cover;
-
-  h2 {
-    margin-bottom: 2rem;
-    text-align: center;
-    text-shadow: 0px 0px 4px #686868;
+.header-text {
+  margin-left: 240px;
+  h1 {
+    margin-top: 160px;
+    padding-left: 0px;
+    font-size: 48px;
+    margin-bottom: -32px;
+    color: white;
   }
-}
-
-.banner-homepage-right {
-  // padding-top: 64px;
-  padding-bottom: 64px;
-  background-color: white;
-}
-
-.form-control {
-  width: 80%;
-  height: 100%;
-  background: white;
-  border-radius: 5px;
-}
-
-.main-banner-img {
-  width: 100%;
-}
-
-// activities section
-.activities-section {
-  padding-top: 64px;
-  padding-bottom: 64px;
-  padding-left: 120px;
-  padding-right: 120px;
-  background: rgba(196, 196, 196, 0.3);
-  width: 100%;
-  h2 {
-    padding-bottom: 72px;
-    text-align: center;
-  }
-}
-
-.homepage-cards {
-  text-align: center;
-  // display: grid;
-  // grid-template-columns: 1fr 1fr 1fr;
-  // grid-gap: 16px;
-  width: 75%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-}
-
-.header-homepage {
-  text-align: center;
-  margin: 40px;
-  font-size: $font-size-header;
-  font-family: $header-font;
-}
-
-.con {
-  padding: 0px 80px;
-}
-
-.card-body {
-  padding: 0px;
-}
-
-.card-homepage {
-  border: none;
-  border-radius: $standard-radius;
-  box-shadow: $standard-shadow;
-  margin-bottom: 24px;
-  text-align: center;
-  padding-bottom: 40px;
-  min-height: 360px;
-  transform: scale(1);
-  transition: $standard-transition;
-  &:hover {
-    transform: scale(1.04);
-  }
-
-  .title-homepage {
-    text-align: center;
-    font-size: 20px;
-    padding: 0px 8px;
-  }
-
-  .card-img-homepage {
-    border-radius: $standard-radius $standard-radius 0 0;
-    width: 100%;
-    height: 120px;
-    object-fit: cover;
-  }
-
-  .user-name-homepage {
-    margin-left: 8px;
-    margin-top: 8px;
-  }
-
-  .user-social-icons {
-    margin-right: -8px;
-    margin-top: 8px;
+  .generated-text-landingpage {
     color: $primary-color;
-    i {
-      padding-right: 8px;
-    }
+    font-size: 48px;
+    font-weight: bold;
   }
-
-  .date-homepage {
-    margin-bottom: 40px;
+  .subheader-landingpage {
+    color: white;
+    font-size: 16px;
   }
+}
 
-  .profile-pic-homepage {
-    text-align: center;
-    img {
-      margin-left: -8px;
-      border-radius: 50%;
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      margin-top: -40px;
-      box-shadow: $standard-shadow;
+.searchbar-landingpage {
+  form {
+    text-align: left;
+    margin-left: 240px;
+  }
+  .algolia-places {
+    width: 400px;
+    form {
+      text-align: left !important;
     }
-    i {
-      float: right;
+    input {
+      border-radius: 8px;
+      width: 400px;
+      height: 48px;
+      font-size: 16px;
+      text-align: left !important;
     }
   }
 }
+
+.subheader-categories {
+  height: 100px;
+  background-color: white;
+  text-align: center;
+  padding: 24px 0px;
+  .subheader-title {
+    font-size: 20px;
+  }
+  .fa-quote-left {
+    color: $primary-color;
+    opacity: .5;
+    margin-left: -160px;
+  }
+  .fa-quote-right {
+    color: $primary-color;
+    opacity: .5;
+    margin-right: -160px;
+    margin-top: -24px;
+  }
+}
+
+// about section
+.about-section {
+  margin-top: 80px;
+  width: 100%;
+  min-height: 600px;
+  text-align: center;
+  padding: 80px 240px;
+  background-color: #F2F4F8;
+  img {
+    width: 80%;
+    border-radius: 0px 0px 0px 100px;
+    box-shadow: 0px 0px 10px rgb(216, 216, 216);
+  }
+  .title-about {
+    font-size: 32px;
+    text-align: left !important;
+    color: #171C2C;
+  }
+  .subtitle-about {
+    font-size: 16px;
+    text-align: left !important;
+    color: #8A99B6;
+  }
+}
+
+.about-count-title {
+  margin: 40px 0px 16px 0px;
+  font-size: 56px;
+  color: $primary-color;
+  background-color: transparent;
+  border: none;
+  text-align: center;
+  width: 50%;
+}
+
+.about-count-description {
+  font-size: 16px;
+  color: #8A99B6;
+  margin-top: -20px;
+  text-align: center;
+}
+
 
 // reviews section
 .reviews-section {
