--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,4 +17,5 @@
     </div>
     <%= render "shared/footer" %>
   </body>
+  <%# <script src=“https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js”></script> %>
 </html>
