--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -1,5 +1,85 @@
 //scss file for profile show page
 // profile-top section
+.profile-top-section {
+  background-image: url("https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?cs=srgb&dl=pexels-min-an-853168.jpg&fm=jpg");
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  text-align: center;
+  color: white;
+  position: relative
+}
+
+.profile-image {
+  display: flex;
+  img {
+  height: 100px;
+  margin: 50px auto;
+  }
+}
+
+.profile-name {
+  font-weight: 600;
+  font-size: 40px;
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0;
+  padding-bottom: 30px;
+
+  p {
+    margin: 0 50px;
+  }
+}
+
+.profile-bio-section {
+  text-align: center;
+  margin: 75px 0;
+}
+
+.profile-bio {
+  h3 {
+    font-weight: 600;;
+  }
+}
+
+.social-media-container {
+  position: absolute;
+  bottom: -25px;
+  margin-left: auto;
+margin-right: auto;
+left: 0;
+right: 0;
+  display: flex;
+justify-content: center;
+  a {
+    padding: 5px 15px 5px 15px;
+
+  }
+
+  img {
+    height: 50px;
+  }
+}
+
+.edit-profile-button {
+  margin-top: auto;
+  margin-bottom: 20px;
+  position: absolute;
+  right: 15px;
+  bottom: 0px;
+
+  p {
+    padding: 0;
+  }
+}
+
+
+
+
+
 .d-grid{
   display: grid;
 }
@@ -25,7 +105,7 @@
 
 .profile-top-right {
   padding-bottom: 64px;
-  background-color: white;
+
   h2 {
     text-align: left;
     font-size: 40px;
@@ -46,32 +126,17 @@
   }
 }
 
-.profile-top-right {
-  padding-bottom: 64px;
-  background-color: white;
-}
+
 
 .info-container {
-  display: flex;
-  align-items: baseline;
-  height: 32px;
+
 }
 
 .social-media-container {
-  display: flex;
-  margin-top: 20px;
-  a {
-    padding: 5px 25px 5px 0;
-  }
+
 }
 
-.edit-profile-button {
-  margin-top: auto;
 
-  p {
-    padding: 0;
-  }
-}
 
 // profile-requests-section
 .profile-requests-section {
