--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,43 +1,51 @@
-<section class="profile-top-section bg-white">
-  <div class="d-grid banner-grid">
-  <div class="banner-grid">
-    <div class="profile-top-left">
+<section class="profile-top-section">
+  <div class="profile-top-section-content">
+    <div class="profile-image">
       <% if @profile.image.attached? %>
-        <%= cl_image_tag @profile.image.key, height: 300, width: 400, crop: :fill %>
+        <%= cl_image_tag @profile.image.key, height: 150, crop: :fill %>
       <% else %>
         <img class="profile-pic-index" src="https://image.flaticon.com/icons/svg/206/206853.svg" alt="">
       <% end %>
     </div>
-    <div class="d-flex flex-column align-items-left profile-top-right">
-      <h2 class="mb-6"><%= @profile.first_name %> <%= @profile.last_name %></h2>
-      <div class="info-container">
-          <h3>Username:</h3>
-          <p><%= @profile.user_name %></p>
+    <h2 class="profile-name"><%= @profile.first_name %> <%= @profile.last_name %></h2>
+    <div class="info-container">
+      <div>
+        <p>Username</p>
+        <h4><%= @profile.user_name %></h4>
       </div>
-      <div class="info-container">
-          <h3>Age:</h3>
-          <p><%= @profile.age %></p>
+      <div>
+        <p>Age</p>
+        <h3><%= @profile.age %></h3>
       </div>
-      <div class="info-container">
-          <h3>Bio:</h3>
-          <p><%= @profile.bio %></p>
-      </div>
+    </div>
+    <div class="edit-profile-button">
+      <p><% if policy(@profile).edit? %><%= link_to "Edit my Profile", edit_user_registration_path(@profile), class: "btn-standard" %><% end %></p>
+    </div>
+    <div>
       <div class="social-media-container">
         <% if @profile.instagram?  %>
-          <%= link_to "", @profile.instagram, class: "fab fa-instagram fa-3x" %>
+          <%= link_to @profile.instagram do %>
+            <img src="https://image.flaticon.com/icons/svg/1409/1409946.svg">
+          <% end %>
         <% end %>
-        <% if @profile.linkedin?  %>
-          <%= link_to "", @profile.linkedin, class: "fab fa-linkedin-in fa-3x" %>
+        <% if @profile.linkedin? %>
+          <%= link_to @profile.linkedin do %>
+            <img src="https://image.flaticon.com/icons/svg/1409/1409945.svg">
+          <% end %>
         <% end %>
-      </div>
-
-      <br>
-      <div class="edit-profile-button">
-        <p><% if policy(@profile).edit? %><%= link_to "Edit my Profile", edit_user_registration_path(@profile), class: "btn-standard" %><% end %></p>
       </div>
     </div>
   </div>
 </section>
+
+<section class="profile-bio-section">
+  <div class="profile-bio">
+    <h3>About me</h3>
+    <p><%= @profile.bio %></p>
+  </div>
+
+</section>
+
 
 
 <section class="profile-events-section">
