--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,9 @@
 // Import page-specific CSS files here.
 @import "home";
 
+body {
+    background-color: #FAFBFD;
+}
 .form-control-search-index {
     width: 500px;
     height: 58px;
@@ -50,8 +53,7 @@
     box-shadow: $standard-shadow;
     margin-bottom: 24px;
     text-align: center;
-    padding-bottom: 40px;
-    min-height: 360px;
+    min-height: 400px;
     transform: scale(1);
     transition: $standard-transition;
     &:hover {
@@ -62,22 +64,27 @@
         text-align: center;
         font-size: 20px;
         padding: 0px 8px;
+        min-height: 40px;
+        color: black;
+        text-decoration: none;
     }
 
     .card-img-index {
-        border-radius: $standard-radius $standard-radius 0 0;
+        border-radius: $standard-radius $standard-radius 50px 0;
         width: 100%;
-        height: 120px;
+        height: 160px;
         object-fit: cover;
+        margin-bottom: 16px;
     }
 
     .user-name-index {
-        margin-left: 8px;
-        margin-top: 8px;
+        font-size: 12px;
+        padding-top: 8px;
+        margin-left: -14px;
+        text-align: left !important;
     }
 
     .user-social-icons {
-        margin-right: -8px;
         margin-top: 8px;
         color: $primary-color;
         i {
@@ -86,7 +93,7 @@
     }
 
     .date-index {
-        margin-bottom: 40px;
+        padding-top: 4px;
     }
 
     .location-index {
@@ -99,6 +106,7 @@
         flex-wrap: wrap;
         margin: 8px auto 24px auto;
         width: 90%;
+        min-height: 72px;
     }
 
     .category-index {
@@ -118,18 +126,21 @@
     .profile-pic-index {
         text-align: center;
         img {
-            margin-left: -8px;
+            margin-left: 30px;
             border-radius: 50%;
-            width: 80px;
-            height: 80px;
+            width: 32px;
+            height: 32px;
             object-fit: cover;
-            margin-top: -40px;
             box-shadow: $standard-shadow;
         }
         i {
             float: right;
         }
     }
+}
+
+.card-footer-index {
+    max-height: 64px;
 
 }
 
