--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -172,9 +172,9 @@
 
 
 <script>
-  var typed = new Typed('#typed', {
+  <%# var typed = new Typed('#typed', {
     stringsElement: '#typed-strings',
     typeSpeed: 100
-  });
+  }); %>
 </script>
 
