--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,9 +2,17 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Imprima&display=swap');
+
 // Define fonts for body and headers
-$body-font: 'Roboto', sans-serif, 200;
-$headers-font: 'Roboto', sans-serif, 400;
+
+$headers-font:'Abril Fatface', cursive;
+$body-font: 'Imprima', sans-serif;
+
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
