--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,17 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;400&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Imprima&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 
 // Define fonts for body and headers
 
-$headers-font:'Abril Fatface', cursive;
-$body-font: 'Imprima', sans-serif;
-
+$headers-font:'Pacifico', cursive;
+$body-font: 'Cabin', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
