--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,50 +1,77 @@
-.header-show-page {
-    padding-left: 80px;
-}
-
-.card-img-show {
-    width: 1000px;
-    height: 500px;
-    float: right;
-    object-fit: cover;
-}
-
-.text-show {
-    margin-top: 200px;
-    p {
-        font-size: $font-size-paragraph;
+.header-show-infos {
+  height: 480px;
+  text-align: center;
+  .header-show-img {
+    & img {
+      width: 100%;
+      object-fit: cover;
+      height: 480px;
     }
-    .show-header {
-        font-size: $font-size-header;
-    }
-}
-
-.desc-show {
-    margin-top: 80px;
-    margin-bottom: 72px;
-    padding: 0px 80px;
-    font-size: $font-size-subheader;
-}
-
-.btn-show {
-    margin-right: 16px;
-    margin-left: 80px;
-}
-
-.btn-show2 {
-  margin-right: 16px;
-}
-
-.map-style-show {
+  }
+  .show-header {
+    font-size: 56px;
     text-align: center;
-    margin: 0 auto;
+    margin-top: -320px;
+    color: white;
+  }
+  .date-show {
+    color: white;
+    font-size: 20px;
+    i {
+      color: $primary-color;
+      margin-right: 8px;
+    }
+  }
+  .location-show {
+    color: white;
+    font-size: 20px;
+    i {
+      color: $primary-color;
+      margin-right: 8px;
+    }
+  }
 }
 
-.show-img-participant {
+.show-date-location {
+  margin-bottom: 24px;
+}
+
+.show-section-both-col {
+  background-color: #FAFBFD;
+  margin: 40px 0px;
+}
+
+.show-infos-left {
+  margin-left: 80px;
+  margin-top: 40px;
+  .show-img-host {
+    width: 72px;
+    height: 72px;
     border-radius: 50%;
-    height: 56px;
-    width: 56px;
-    object-fit: cover;
+    border: 2px solid $primary-color;
+    margin-bottom: 24px;
+  }
+  .show-img-participant {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+  }
+  .desc-show {
+    font-size: 20px;
+  }
+}
+
+.show-infos-right {
+  .map-style-show {
+    height: 600px;
+  }
+}
+
+.btn-show-request-status {
+  background-color: transparent;
+  padding: $button-padding;
+  color: $primary-color;
+  border: 1px solid $primary-color;
 }
 
 //comments-form-section
