--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,24 +29,16 @@
 <div class="subheader-categories">
   <div class="row">
     <div class="col-3">
-      <i class="fas fa-quote-left fa-2x"></i>
-      <p class="subheader-title">Simply the best website!</p>
-      <i class="fas fa-quote-right fa-2x"></i>
+      <img src="../../assets/images/heroku.png" alt="">
     </div>
     <div class="col-3">
-      <i class="fas fa-quote-left fa-2x"></i>
-      <p class="subheader-title">Found awesome people</p>
-      <i class="fas fa-quote-right fa-2x"></i>
+      <img src="../../assets/images/lewagon-logo-square-fe76916e1b923ade71e253ae6dc031d936e5e8eebac4e26b0fbac650ea6ee360.png" alt="">
     </div>
     <div class="col-3">
-      <i class="fas fa-quote-left fa-2x"></i>
-      <p class="subheader-title">New City. New Friends.</p>
-      <i class="fas fa-quote-right fa-2x"></i>
+      <img src="../../assets/images/Ruby_On_Rails_Logo.svg.png" alt="">
     </div>
     <div class="col-3">
-      <i class="fas fa-quote-left fa-2x"></i>
-      <p class="subheader-title">Circl and LinkedIn 🚀</p>
-      <i class="fas fa-quote-right fa-2x"></i>
+      <img src="../../assets/images/0_vW67MXg6_HQPureN.png" alt="">
     </div>
   </div>
 </div>
