--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,14 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;400&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 // Define fonts for body and headers
 
-$headers-font:'Pacifico', cursive;
-$body-font: 'Cabin', sans-serif;
+$headers-font: 'Antic Slab', serif;
+$body-font: 'Josefin Sans', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
