sections combined with event category filter feature

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -54,8 +54,8 @@
     margin-top: 16px;
 }
 
-.nav-div {
-    text-align: center;
+.justify-content-center {
+    justify-content: center!important;
 }
 
 .badge-white-soft {
